--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
-    <h2>plink</h2>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
     <main>
         <h1>Welcome to My Website</h1>
+        <h2>plink</h2>
+        <h3>plonk</h3>
     </main>
 	<script src="index.js"></script>
   </body>
