--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>
+      <h1>Welcome to My Website</h1>
+      <div class="plinkContainer">
         <h2>plink</h2>
-        <img src="./website/plink.gif"
-        height="200px" width="600px">
+        <img src="./website/plink.gif" height="200px" width="600px" />
+      </div>
+      <div class="plonkContainer">
         <h3>plonk</h3>
-        <img src="./website/4x.webp"
-        height="200px" width="600px">
+        <img src="./website/4x.webp" height="200px" width="600px" />
+      </div>
+      <button onclick="onPlinkClick()">Plink</button>
+      <button onclick="onPlonkClick()">Plonk</button>
     </main>
-	<script src="index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
