--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <main>
         <h1>Welcome to My Website</h1>
         <h2>plink</h2>
+        <img src="./website/plink.gif"
+        height="200px" width="600px">
         <h3>plonk</h3>
+        <img src="./website/4x.webp"
+        height="200px" width="600px">
     </main>
 	<script src="index.js"></script>
   </body>
