Buttons unplink and unplonk now

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <img src="./website/plink.gif" height="200px" width="600px" />
       </div>
       <div class="plonkContainer">
-        <h3>plonk</h3>
+        <h2>plonk</h2>
         <img src="./website/4x.webp" height="200px" width="600px" />
       </div>
-      <button onclick="onPlinkClick()">Plink</button>
-      <button onclick="onPlonkClick()">Plonk</button>
+      <button id="plinkButton" onclick="onPlinkClick()">Plink</button>
+      <button id="plonkButton" onclick="onPlonkClick()">Plonk</button>
     </main>
     <script src="index.js"></script>
   </body>
