--- a/index.html
+++ b/index.html
@@ -11,16 +11,41 @@
   <body>
     <main>
       <h1>Welcome to My Website</h1>
+      <h2>plink</h2>
       <div class="plinkContainer">
-        <h2>plink</h2>
         <img src="./website/plink.gif" height="200px" width="600px" />
-      </div>
-      <div class="plonkContainer">
-        <h2>plonk</h2>
-        <img src="./website/4x.webp" height="200px" width="600px" />
+        <h3>Backstory</h3>
+        <p>The hero of the story, the only and only, the child blessed with the watery eyes.</p>
+        <ol>
+          <li>Likes</li>
+          <li>Dislikes</li>
+          <li>Traits</li>
+        </ol>
+        <ul>
+          <li>Charismatic</li>
+          <li>+10 Persuasion</li>
+        </ul>
       </div>
       <button id="plinkButton" onclick="onPlinkClick()">Plink</button>
+      <h2>plonk</h2>
+      <div class="plonkContainer">
+        <img src="./website/4x.webp" height="200px" width="600px" />
+        <h3>Backsotry</h3>
+        <p>The antagonist of out story, you can feel the hatred emanating from him in every plonk.</p>
+        <ol>
+          <li>Likes</li>
+          <li>Dislikes</li>
+          <li>Traits</li>
+        </ol>
+        <ul>
+          <li>Resentful</li>
+          <li>+10 Deception</li>
+        </ul>
+      </div>
       <button id="plonkButton" onclick="onPlonkClick()">Plonk</button>
+      <audio id="song" controls>
+        <source src="./website/Tax-Office-Day-PM-Music.mp3">
+      </audio>
     </main>
     <script src="index.js"></script>
   </body>
