Dynamically generate heroes
- generate html based on hero list in createHero()
- add plunk gif

--- a/index.html
+++ b/index.html
@@ -10,41 +10,62 @@
   </head>
   <body>
     <main>
-      <h1>Welcome to My Website</h1>
-      <h2>plink</h2>
+      <h1>Plink: Legends</h1>
+      <div id="heroes">
+
+      </div>
+      <!-- <h2>plink</h2>
       <div class="plinkContainer">
         <img src="./website/plink.gif" height="200px" width="600px" />
         <h3>Backstory</h3>
-        <p>The hero of the story, the only and only, the child blessed with the watery eyes.</p>
-        <ol>
-          <li>Likes</li>
-          <li>Dislikes</li>
-          <li>Traits</li>
-        </ol>
+        <p>
+          The hero of the story, the only and only, the child blessed with the
+          watery eyes.
+        </p>
         <ul>
-          <li>Charismatic</li>
-          <li>+10 Persuasion</li>
+          <li>
+            <span>Likes:</span>
+            <span id="plinkLikes"></span>
+          </li>
+          <li>
+            <span>Dislikes:</span>
+            <span id="plinkDislikes"></span>
+          </li>
+          <li>Traits: Cute</li>
+        </ul>
+        <ul>
+          <li>Characteristic: Super Cool</li>
+          <li>Stat Boost: +8 Persuasion</li>
         </ul>
       </div>
       <button id="plinkButton" onclick="onPlinkClick()">Plink</button>
       <h2>plonk</h2>
       <div class="plonkContainer">
         <img src="./website/4x.webp" height="200px" width="600px" />
-        <h3>Backsotry</h3>
-        <p>The antagonist of out story, you can feel the hatred emanating from him in every plonk.</p>
-        <ol>
-          <li>Likes</li>
-          <li>Dislikes</li>
-          <li>Traits</li>
-        </ol>
+        <h3>Backstory</h3>
+        <p>
+          The antagonist of out story, you can feel the hatred emanating from
+          him in every plonk.
+        </p>
         <ul>
-          <li>Resentful</li>
-          <li>+10 Deception</li>
+          <li>
+            <span>Likes:</span>
+            <span id="plonkLikes"></span>
+          </li>
+          <li>
+            <span>Dislikes:</span>
+            <span id="plonkDislikes"></span>
+          </li>
+          <li>Traits: Cute?</li>
+        </ul>
+        <ul>
+          <li>Characteristic: Resentful</li>
+          <li>Stat Boost: +10 Deception</li>
         </ul>
       </div>
-      <button id="plonkButton" onclick="onPlonkClick()">Plonk</button>
+      <button id="plonkButton" onclick="onPlonkClick()">Plonk</button> -->
       <audio id="song" controls>
-        <source src="./website/Tax-Office-Day-PM-Music.mp3">
+        <source src="./website/Tax-Office-Day-PM-Music.mp3" />
       </audio>
     </main>
     <script src="index.js"></script>
